# rag-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_sanity.py
